--- a/v1_net45/packages.config
+++ b/v1_net45/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.1.0-rc2-build1126" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
