--- a/v2x_ModernPCL/project.json
+++ b/v2x_ModernPCL/project.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "Microsoft.NETCore": "5.0.0",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
-    "xunit": "2.1.0-rc2-build3176",
-    "xunit.runner.visualstudio": "2.1.0-rc2-build1126"
+    "xunit": "2.1.0",
+    "xunit.runner.visualstudio": "2.1.0"
   },
   "frameworks": {
     "dotnet": {
