--- a/Devices.UWP.OnlyPCL/project.json
+++ b/Devices.UWP.OnlyPCL/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "xunit.runner.devices": "1.2.0-rc4-build0009"
+    "xunit.runner.devices": "1.2.0"
   },
   "frameworks": {
     "uap10.0": {}
