--- a/v2x_dnx/project.json
+++ b/v2x_dnx/project.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "xunit": "2.1.0",
-        "xunit.runner.dnx": "2.1.0-beta5-*"
+        "xunit.runner.dnx": "2.1.0-beta5a-*"
     },
     "commands": {
         "test": "xunit.runner.dnx"
