--- a/v2x_net45_FSharp/v2x_net45_FSharp.fsproj
+++ b/v2x_net45_FSharp/v2x_net45_FSharp.fsproj
@@ -68,29 +68,33 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="xunit.abstractions">
-      <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
+      <HintPath>..\packages\xunit.abstractions.2.0.1-rc2\lib\net35\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit.abstractions" />
     <Reference Include="xunit.assert">
-      <HintPath>..\packages\xunit.assert.2.1.0\lib\dotnet\xunit.assert.dll</HintPath>
+      <HintPath>..\packages\xunit.assert.2.2.0-beta2-build3297\lib\netstandard1.0\xunit.assert.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit.assert" />
     <Reference Include="xunit.assert" />
     <Reference Include="xunit.assert" />
     <Reference Include="xunit.assert" />
     <Reference Include="xunit.assert" />
     <Reference Include="xunit.core">
-      <HintPath>..\packages\xunit.extensibility.core.2.1.0\lib\dotnet\xunit.core.dll</HintPath>
+      <HintPath>..\packages\xunit.extensibility.core.2.2.0-beta2-build3297\lib\net45\xunit.core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit.core" />
     <Reference Include="xunit.core" />
     <Reference Include="xunit.core" />
     <Reference Include="xunit.core" />
     <Reference Include="xunit.core" />
     <Reference Include="xunit.execution.desktop">
-      <HintPath>..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
+      <HintPath>..\packages\xunit.extensibility.execution.2.2.0-beta2-build3297\lib\net45\xunit.execution.desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit.execution.desktop" />
     <Reference Include="xunit.execution.desktop" />
     <Reference Include="xunit.execution.desktop" />
     <Reference Include="xunit.execution.desktop" />
