--- a/v2x_NetCoreApp/project.json
+++ b/v2x_NetCoreApp/project.json
@@ -1,16 +1,16 @@
-﻿{
+{
     "version": "1.0.0-*",
     "testRunner": "xunit",
     "buildOptions": {
         "copyToOutput": [ "xunit.runner.json" ]
     },
     "dependencies": {
-        "dotnet-test-xunit": "1.0.0-rc3-build10027",
+        "dotnet-test-xunit": "2.2.0-preview2-build1029",
         "Microsoft.NETCore.App": {
             "type": "platform",
             "version": "1.0.0-rc2-3002702"
         },
-        "xunit": "2.2.0-beta2-build3298"
+        "xunit": "2.2.0-beta2-build3300"
     },
     "frameworks": {
         "netcoreapp1.0": {
