--- a/v2x_UWP/project.json
+++ b/v2x_UWP/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "xunit": "2.2.0-beta2-build3297",
-    "xunit.runner.visualstudio": "2.1.0"
+    "xunit": "2.2.0-beta2-build3300",
+    "xunit.runner.visualstudio": "2.2.0-beta2-build1149"
   },
   "frameworks": {
     "uap10.0": {}
