add an integration test demonstrating that cross-assembly inherited tests have correct source information

--- a/v2x_net45/v2x_net45.csproj
+++ b/v2x_net45/v2x_net45.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractTestClass.cs" />
     <Compile Include="BasicTests.cs" />
     <Compile Include="DeserializationFailureTests.cs" />
     <Compile Include="FixtureFailureTests.cs" />
