--- a/v1_net45/packages.config
+++ b/v1_net45/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.2.0-beta3-build1154" targetFramework="net45" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.2.0-beta5-build1218" targetFramework="net45" developmentDependency="true" />
 </packages>
