--- a/v2x_NetCoreApp/project.json
+++ b/v2x_NetCoreApp/project.json
@@ -5,20 +5,14 @@
         "copyToOutput": [ "xunit.runner.json" ]
     },
     "dependencies": {
-      "dotnet-test-xunit": "2.2.0-preview3-build1032",
+      "dotnet-test-xunit": "2.2.0-preview3-build1047",
       "Microsoft.NETCore.App": {
         "type": "platform",
-        "version": "1.0.0-rc2-3002702"
+        "version": "1.0.1"
       },
-      "xunit": "2.2.0-beta3-build3329"
+        "xunit": "2.2.0-beta5-build3469"
     },
     "frameworks": {
-        "netcoreapp1.0": {
-            // Should be able to dump the imports once .NET tooling gets proper packages
-            "imports": [
-                "dnxcore50",
-                "portable-net45+win8"
-            ]
-        }
+        "netcoreapp1.0": {}
     }
 }
