--- a/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
+++ b/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
@@ -9,12 +9,13 @@
     <ProjectGuid>656ef85a-a205-426f-8b79-2969dc118be2</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>v2_net45_FSharp</RootNamespace>
-    <AssemblyName>v2x_net45_FSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <AssemblyName>v2x_net452_FSharp</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>v2x_net45_FSharp</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -71,7 +72,6 @@
       <HintPath>..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="xunit.abstractions" />
     <Reference Include="xunit.assert">
       <HintPath>..\packages\xunit.assert.2.2.0-beta5-build3474\lib\netstandard1.0\xunit.assert.dll</HintPath>
       <Private>True</Private>
